Wed Jan 19 08:28:11 2005  Chad Elliott  <elliott_c@ociweb.com>

        * bin/tao_orb_tests.lst:

          Added TAO/tests/GIOP_Fragments/PMB_With_Fragments/run_test.pl to
          the list of tests.

Tue Jan 18 09:32:47 2005  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/bor.mpd:
        * bin/MakeProjectCreator/templates/gnu.mpd:

          Allow the addition to 'command' and 'dependent' within the scope
          of a custom section.  This is part of the MPC change from
          Tue Jan 18 09:29:09 2005.

Tue Jan 18 08:17:10 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

        * ace/Log_Msg.cpp (open): Fixed the logic to pass prog_name
          rather than logger_key, which fixes a bug with syslog.  Thanks
          to Robert Iakobashvili <roberti@GoNetworks.com> for this fix.

Mon Jan 17 23:08:20 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Clarify that we're checking whether the second argument to
          gettimeofday() is a _struct_ timezone *.

        * m4/platform.m4:

          Fixed ACE_VAR_TIMEZONE macro to avoid false positive on systems
          with the timezone() function.

Sun Jan 16 23:26:58 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:

          Removed autoheader template for ACE_HAS_SIGINFO_T.

        * configure.ac:

          Simplified check for ACE_HAS_SIGINFO_T.
          Added check for ACE_LACKS_SI_ADDR.
          Added check for ACE_HAS_PTHREAD_NP_H.

Sun Jan 16 22:14:25 2005  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/os_include/os_pthread.h:

          #include <pthread_np.h> if ACE_HAS_PTHREAD_NP_H is defined.

        * ace/README:

          Document new feature test macro ACE_HAS_PTHREAD_NP_H.

Sun Jan 16 18:52:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/CDR_Stream.{h,cpp}:
          Don't implement the destructor of ACE_WChar_Codeset_Translator